Closed
Bug 1934491
Opened 1 year ago
Closed 1 year ago
Searching should be aborted at shutdown
Categories
(MailNews Core :: Search, defect)
MailNews Core
Search
Tracking
(Not tracked)
RESOLVED
FIXED
135 Branch
People
(Reporter: darktrojan, Assigned: darktrojan)
References
Details
Crash Data
Attachments
(1 file)
There's a lot of shutdown hang crashes where the hanging thread is executing a search. Like this one. We should stop doing that when shutdown is detected.
| Assignee | ||
Updated•1 year ago
|
Crash Signature: [@ shutdownhang | ZwReadFile ]
| Assignee | ||
Comment 1•1 year ago
•
|
||
I think here would be a good place to check if we're shutting down and stop if we are.
Crash Signature: [@ shutdownhang | ZwReadFile ] → [@ shutdownhang | ZwReadFile ]
[@ shutdownhang | NS_ReadLine<T> ]
| Assignee | ||
Comment 2•1 year ago
|
||
A quick fix that should solve a lot of shutdown hangs.
Updated•1 year ago
|
Assignee: nobody → geoff
Status: NEW → ASSIGNED
| Assignee | ||
Updated•1 year ago
|
Keywords: checkin-needed-tb
Target Milestone: --- → 135 Branch
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/e17053f7b565
Stop searching folders when shutdown begins. r=mkmelin
You need to log in
before you can comment on or make changes to this bug.
Description
•