Bug 1934491 - Stop searching folders when shutdown begins. r=mkmelin A quick fix that should solve a lot of shutdown hangs.

Differential Revision: https://phabricator.services.mozilla.com/D230744

--HG--
extra : rebase_source : 1a90042ef676c08902d04237d0a0200571f0963c
extra : amend_source : 4d1a26a9836dc4ae0086a334f1dd5ccb53eabf0a